@@ -1,3 +1,8 @@
+2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>
+
+	* tiny/tinydebian.el (tinydebian-bts-mail-ctrl-command-tags):
+	Check exixting tags and add to them.
+
 2012-01-02 Mon  Jari Aalto  <jari.aalto@cante.net>
 
 	* tiny/tinydesk.el (tinydesk-unload): use `with-temp-buffer'.
